<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/configurationView"
android:background="#000000"
    tools:context="io.github.poerhiza.textsafe.ConfigurationActivity">

<ToggleButton
    android:id="@+id/toggle_configuration_drop_incoming"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignTop="@+id/textView1"
    android:layout_marginRight="38dp"
    />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView1"
    android:layout_below="@+id/toggle_configuration_drop_incoming"
    android:layout_marginTop="50dp"
    android:text="@string/forward_to_ws_"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="#ffffff"
    />

<EditText
    android:id="@+id/input_ws_to_forward_to"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView3"
    android:layout_alignRight="@+id/textView2"
    android:layout_below="@+id/textView3"
    android:ems="10"
    android:imeOptions="actionDone"
    android:inputType="textUri"
    android:singleLine="true" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView2"
    android:layout_centerVertical="true"
    android:text="@string/web_service_url"
    android:textAppearance="?android:attr/textAppearanceSmall"
    />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="34dp"
    android:layout_marginTop="45dp"
    android:text="@string/drop_incoming"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="#FFFFFF"
    />

<ToggleButton
    android:id="@+id/toggle_configuration_forward_to_ws"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/toggle_configuration_drop_incoming"
    android:layout_alignTop="@+id/textView2"
    />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView4"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/textView4"
    android:layout_marginBottom="21dp"
    android:text="@string/forward_to_ws_description"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/textView5"
    android:layout_alignLeft="@+id/input_ws_to_forward_to"
    android:layout_alignRight="@+id/button1"
    android:layout_marginBottom="18dp"
    android:text="@string/drop_incoming_description"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<Button
    android:id="@+id/button1"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/input_ws_to_forward_to"
    android:layout_alignLeft="@+id/toggle_configuration_forward_to_ws"
    android:layout_alignRight="@+id/toggle_configuration_forward_to_ws"
    android:layout_below="@+id/textView3"
    android:onClick="saveWSURL"
    android:text="@string/save" />

</RelativeLayout>