<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="io.github.poerhiza.textsafe.EditAutoResponseActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#eee"
        android:layout_below="@+id/text_auto_response_title"
        android:layout_alignStart="@+id/text_auto_response_title"
        android:layout_marginTop="33dp"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#eee"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/text_auto_response_title"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:singleLine="false"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/text_auto_response_title"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:ems="10"
        android:textColor="#ccc"
        android:background="#222"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/text_auto_response_response"
        android:layout_alignEnd="@+id/text_auto_response_response"
        android:textStyle="bold"
        android:textIsSelectable="true"
        android:maxLines="1"
        android:lines="1"
        android:inputType="textShortMessage|text"
        android:elegantTextHeight="false"
        android:capitalize="words"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_edit_auto_response_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelSettings"
        android:text="@string/cancel"
        android:layout_alignTop="@+id/button_edit_auto_response_apply"
        android:layout_alignEnd="@+id/text_auto_response_response"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/button_edit_auto_response_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="applySettings"
        android:text="@string/apply"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/text_auto_response_response"
        android:layout_marginBottom="67dp"
        android:textColor="#ccc" />

    <EditText
        android:id="@+id/text_auto_response_response"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:ems="10"
        android:fadingEdge="vertical"
        android:inputType="textShortMessage|textMultiLine"
        android:lines="6"
        android:scrollbars="vertical"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:width="300dp"
        android:background="#222"
        android:textColor="#ccc"
        android:elegantTextHeight="false"
        android:editable="false"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:autoText="false"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:layout_alignParentStart="false"
        android:maxLength="160" />

</RelativeLayout>